--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -124,7 +124,7 @@
             #box1{
         width: 353px;
             height: 275px;
-        background: none ;
+        background: url('/static/bgbw.png') ;
         position: absolute;
         bottom: -100%;
         left:30%;
@@ -136,7 +136,7 @@
             width: 353px;
             height: 200px;
             top: 0px;
-            background: none;
+            background: url(/static/bgnorsmall.png);
             left: 30%;
             z-index: -1;
     }
