--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %} {% block content %}
  {% load static %}
 <!--<link rel="stylesheet" href = "http://www.w3schools.com/lib/w3.css"/>-->
-
+<body >
 <div id="main">
     <div id="box1"></div>
 
     <div id="box2">
         <div id="text">
-            Data Sciene &<br>Artificial Intelligence Inquisitive Club
+            Data Science &<br>Artificial Intelligence Inquisitive Club
         </div>
     </div>
 
@@ -19,7 +19,9 @@
         </div>
     </div>
 </div>
+</body>
 <style>
+
     #main{
         width:100%;
         height: 80%;
