--- a/dsaii/templates/codinghr.html
+++ b/dsaii/templates/codinghr.html
@@ -17,49 +17,31 @@ Number of attendees: 20
         }
       </script>
       <style type="text/css">
-        .carousel-inner{
-            position: relative;
-            width: 29%;
-            overflow: hidden;
-            left: 381px;
-        }
         .carousel-inner img {
-          height: 524px;
+          height: 514px;
         }
         @media (max-width: 750px) {
-            .carousel-inner{
-            position: relative;
-            width: 90%;
-            overflow: hidden;
-            left: 14px;
-        }
             .carousel-inner img {
-              height: 500px;
+              height: 255px;
             }
         }
       </style>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/static/ch.png" class="d-block w-100" alt="..." >
+            <img src="/static/ss10.png" class="d-block w-100" alt="..." >
           </div>
           <div class="carousel-item">
-            <img src="/static/ch4.png" class="d-block w-100" alt="...">
+            <img src="/static/ss2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/static/ch5.png" class="d-block w-100" alt="...">
+            <img src="/static/ss6.png" class="d-block w-100" alt="...">
           </div>
             <div class="carousel-item">
-            <img src="/static/ch7.png" class="d-block w-100" alt="...">
+            <img src="/static/ss5.png" class="d-block w-100" alt="...">
           </div>
             <div class="carousel-item">
-            <img src="/static/ch2.png" class="d-block w-100" alt="...">
-          </div>
-            <div class="carousel-item">
-            <img src="/static/ch9.png" class="d-block w-100" alt="...">
-          </div>
-            <div class="carousel-item">
-            <img src="/static/ch1.png" class="d-block w-100" alt="...">
+            <img src="/static/ss9.png" class="d-block w-100" alt="...">
           </div>
 
         </div>
