--- a/dsaii/templates/codinghr.html
+++ b/dsaii/templates/codinghr.html
@@ -21,6 +21,12 @@ Number of attendees: 20
           height: 514px;
         }
         @media (max-width: 750px) {
+            .carousel-inner {
+                position: relative;
+                width: 321px;
+                overflow: hidden;
+                left: -9px;
+            }
             .carousel-inner img {
               height: 255px;
             }
