--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -124,7 +124,7 @@
                 height: 583px;
                 }
           #main{
-            top: 180px;
+            top: 159px;
             }
 
 
@@ -139,7 +139,7 @@
             position: absolute;
             width: 353px;
             height: 200px;
-            top: 28px;
+            top: 16px;
         background: none ;
 
         bottom: -100%;
@@ -150,9 +150,9 @@
         content: '';
             position: absolute;
             width: 353px;
-            height: 200px;
-            top: -25px;
-            background: url(/static/bgnorsmall.png);
+            height: 386px;
+            top: -33px;
+            background: url(/static/AI.gif);
             left: 30%;
             z-index: -1;
     }
@@ -164,7 +164,7 @@
             font-weight: 500;
             line-height: 53px;
             position: absolute;
-            top: -6px;
+            top: 151px;
             left: 15px;
             overflow: hidden;
 
