--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -85,7 +85,7 @@ Exposing the participants to practical and
 
   </div></a>
 </div>
-
+<br><br><br><br><br><br>
 </div>
 <br><br><br>
 <style>
@@ -120,7 +120,7 @@ section::before{
 }
 
 .container{
-    position: absolute;
+    position: relative;
     z-index: 1;
     display: flex;
     justify-content: space-around;
@@ -248,7 +248,7 @@ input[type="submit"]:hover{
     }
     .container{
             left: 0px;
-            top: 225px;
+            top: -30px;
     }
     .container .card{
         background: white;
