--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body background="/static/dgb.jpg" style="background-size: cover;" >
+<body  style="background: #383838;" >
 {% include 'navigation.html' %}
   {% block content %}
 
