--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -2,31 +2,217 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
  <script  src="./script.js"></script>
+<h1 style="color: white; font-weight: 900; text-align: center;"><br>BLOGS</h1>
 
-<div class="parent-div" >
-    <div class="container" style="color: white;text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 46%;
-    transform: translate(-50%, -50%);
-background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255 , 255, 0.18);
-border-radius: 15px;">
-<h1 style="font-weight: 600;">BLOGS</h1>
-<ul >
+    <div class="container" >
+
 {% for post in object_list %}
 
-    <li style="font-size: x-large;font-weight: 400;" ><a href = "{% url 'article' post.pk %}"  style="font-size: x-large; color : white;">{{post.title}}</a> <br/>
-    </li>
+    <a href="{% url 'article' post.pk %}"> <div class="cardzz" >
+
+    <div class="content">
+        <div class="box">{{post.dd}}<br>{{post.mm}}, {{post.yy}}<br>_____________</div>
+        <div class="imgBox">
+            <img src="{{ post.image.url }}">
+         </div>
+         <div class="contentBox">
+             <br><h3>{{post.title}}<br><span>{{post.title_tag}}</span></h3>
+         </div>
+    </div>
+
+   </div></a>
 {% endfor %}
-</ul>
+
 </div>
-</div>
+<br><br><br>
 
 <style>
+
+    @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,700')
+*
+{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+
+
+
+}
+
+body{
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 100vh;
+
+}
+
+
+section::before{
+    content: relative;
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.container{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 40px 0;
+    left: 200px;
+}
+
+.container .cardzz{
+    position: relative;
+    width: 350px;
+    height: 500px;
+    margin :20px;
+    background: transparent;
+    border-radius: 1.25em;
+
+}
+
+.container .cardzz:hover{
+    background: white;
+}
+
+.container .cardzz .content{
+    top: 35px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 1;
+    transition: 0.5s;
+
+}
+
+.container .cardzz .content .box{
+    height: 117px;
+    width: 260px;
+    color: white;
+}
+.container .cardzz:hover .content .box{
+    color: black;
+}
+
+.container .cardzz .content .imgBox{
+    position: relative;
+    width: 240px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: visible;
+
+}
+
+.container .cardzz .content .imgBox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container .cardzz .content .contentBox h3{
+    color:white;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bolder;
+    font-size: 20px;
+    text-align: center;
+    margin: 20px 0 10 px;
+    line-height: 1.1em;
+
+}
+
+.container .cardzz:hover .content .contentBox h3{
+    color: black;
+}
+
+
+.container .cardzz .content .contentBox h3 span{
+    font-size: 12px;
+    font-weight: 50px;
+    text-transform: initial;
+}
+
+.container .cardzz .sci{
+    position: absolute;
+    bottom: 50px;
+    display: flex;
+
+}
+
+.container .cardzz .sci .li{
+    list-style: none;
+    margin: 0 10px;
+    transform: translateY(40px);
+    transition: 0.5s;
+    opacity: 1;
+    transition-delay: calc(0.1s *var(--i));
+
+}
+
+.container .cardzz:hover .sci li{
+    transform: translateY(40px);
+    opacity: 1;
+
+}
+
+.container .cardzz .sci li a{
+    color: black;
+    font-size: 24px;
+}
+input[type="submit"]{
+    border: none;
+    border-radius: 16px;
+    padding-bottom: 0;
+    height: 60px;
+    width: 114px;
+    background: #df2359;
+    color: white;
+    cursor: pointer;
+    transition: background-color .3s;
+
+}
+
+input[type="submit"]:hover{
+    background: #c0392b;
+    }
+
+@media (max-width: 750px) {
+    .h1, h1{
+
+    }
+    .container{
+            left: 0px;
+            top: -30px;
+    }
+    .container .cardzz{
+        background: white;
+        width: 310px;
+
+    }
+    .container .cardzz .content .contentBox h3{
+    color: black;
+}
+    .container .cardzz .content .box{
+        color: black;
+    }
+    .container .cardzz .content{
+        opacity: 1;
+    }
+    }
+
     @media (max-width: 750px){
         .container .ul .li .a{
             font-size: small;
