--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -281,6 +281,10 @@ input[type="submit"]:hover{
         color: black;
 
     }
+    @media (min-width: 1700px){
+        .container{
+        left: 305px;}
+    }
     }
 </style>
 {% endblock %}
