--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'events.css' %}">
 <link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
-
+<body>
     <h1 style="color: white; font-weight: 900; text-align: center;"><br>EVENTS</h1>
     <div class="container" >
         <div class="card">
@@ -48,5 +48,5 @@
 
 </div>
 </div><br><br><br>
-
+</body>
 {% endblock %}
