--- a/dsaii/templates/l1.html
+++ b/dsaii/templates/l1.html
@@ -33,10 +33,10 @@ feedback_pass:'Passed: no action needed<br/><br/>More information:<br/><a href="
 
 <div id="content-main">
 <form action="/DSAIIAdmin/login/?next=/DSAIIAdmin/" method="post" id="login-form"><input type="hidden" name="csrfmiddlewaretoken" value="ugeXacOQ5c5CeMAUgY5uPXSsvV6aqpAuQJMlwFfQJ7OJxebz7w5Um5b2Pfb0SFhT">
-                    <img src="/static/DL.png" style="width: 100px;
+                    <img src="/static/kslogo.jpeg" style="width: 100px;
     height: 100px;
     border-radius: 25%;">
-        <h3 id="site-name" style="color: white;">DSAII Admin Area</h3>
+        <h3 id="site-name" style="color: white;">Khushi Website Admin Area</h3>
       {% csrf_token %}
     <br><input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" placeholder="Username">
     <br><input type="password" name="password" autocomplete="current-password" required="" id="id_password" placeholder="Password">
