--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
-/>
-
+  <link rel= "stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'team.css' %}">
-<link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
-
+<link rel="stylesheet" href = "https://unp.com/boxicons@latest/css/boxicons.min.css"/>
+<body>
 <h1 style="color: white; font-weight: 900; text-align: center;"><br>TEAM</h1>
 
 
@@ -20,10 +16,9 @@
             <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="">
-                     </div>
+                        <img src="">                    </div>
                      <div class="contentBox">
-                         <br><h3>Prof Dheeraj Agrawal<br><span>Dean IIIC and T&P</span></h3>
+                         <br><h3>NAME<br><span>POST</span></h3>
                      </div>
                 </div>
 
@@ -32,10 +27,9 @@
             <div class="card">
                 <div class="content">
                     <div class="imgBox">
-                        <img src="/static/president.png">
-                     </div>
+                        <img src=""/>                     </div>
                      <div class="contentBox">
-                         <br><h3>Kashish Nahar<br><span>President</span></h3>
+                         <br><h3>NAME<br><span>POST</span></h3>
                      </div>
                 </div>
 
@@ -45,23 +39,54 @@
                 <div class="card">
                     <div class="content">
                         <div class="imgBox">
-                            <img src="/static/secretary.png">
+                            <img src=""/>
                          </div>
                          <div class="contentBox">
-                             <br><h3>Rajvi Jagani<br><span>Secretary</span></h3>
+                             <br><h3>NAME<br><span>POST</span></h3>
                          </div>
                     </div>
 
                 </div>
 
 
+                    <div class="card">                       <div class="content">
+                          <div class="imgBox">
+                                <img src="">
+                            </div>
+                             <div class="contentBox">
+                                 <br><h3>NAME<br><span>POST</span></h3>
+                             </div>
+                        </div>
+
+                    </div>
+                   <div class="card">
+                        <div class="content">
+                          <div class="imgBox">
+                                <img src="rer.png">
+                            </div>
+                             <div class="contentBox">
+                                 <br><h3>NAME<br><span>POST</span></h3>
+                             </div>
+                        </div>
+
+                    </div>                    <div class="card">
+                        <div class="content">
+                          <div class="imgBox">
+                                <img src=".png">
+                            </div>
+                             <div class="contentBox">
+                                 <br><h3>NAME<br><span>POST</span></h3>
+                             </div>
+                        </div>
+                   </div>
+
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/vp.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Vyom Chaplot<br><span>Vice President</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -70,10 +95,11 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/Treasurer.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Srushti Bhujbal<br><span>Treasurer</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
+
                              </div>
                         </div>
 
@@ -82,10 +108,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/relead.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Akshay Jagtap<br><span>Research Lead</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -94,10 +120,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/recolead.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Atharva Sharma<br><span>Research Co-Lead</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -106,12 +132,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/reasso.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Sonu Vishwakarma<br><span>
-                                   Research Associate
-                                 </span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -120,10 +144,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/techlead.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Hardik Majethia<br><span>Technical Lead</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -132,10 +156,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/techcolead.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Sahil Bhor<br><span>Technical Co-Lead</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -144,10 +168,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/adcolead.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Bhavnish Singhall<br><span>Administration Co-Lead</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -156,10 +180,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/adcolead2.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Vaibhav Digraskar<br><span>Administration Co-Lead</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -168,46 +192,10 @@
                     <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/grdes.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Zaid Rupani<br><span>Graphic Designer</span></h3>
-                             </div>
-                        </div>
-
-                    </div>
-
-                    <div class="card">
-                        <div class="content">
-                          <div class="imgBox">
-                                <img src="/static/grdes2.png">
-                            </div>
-                             <div class="contentBox">
-                                 <br><h3>Mohit Bhaisare<br><span>Graphic Designer</span></h3>
-                             </div>
-                        </div>
-
-                    </div>
-
-                    <div class="card">
-                        <div class="content">
-                          <div class="imgBox">
-                                <img src="/static/contentwr.png">
-                            </div>
-                             <div class="contentBox">
-                                 <br><h3>Navya J. Nair<br><span>Content Writer</span></h3>
-                             </div>
-                        </div>
-
-                    </div>
-
-                    <div class="card">
-                        <div class="content">
-                          <div class="imgBox">
-                                <img src="/static/webdev.png">
-                            </div>
-                             <div class="contentBox">
-                                 <br><h3>Khushi Sali<br><span>Web Developer</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -215,10 +203,10 @@
           <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/01.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Gautami Kadam<br><span>Outreach Head</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -226,10 +214,10 @@
           <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/o2.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Rushaad Arab<br><span>Outreach Team</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -237,10 +225,10 @@
           <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/o3.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Esha Dabhade<br><span>Outreach Team</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -248,10 +236,10 @@
           <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/o4.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Saba Shaikh<br><span>Outreach Team</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -259,10 +247,10 @@
           <div class="card">
                         <div class="content">
                           <div class="imgBox">
-                                <img src="/static/o5.png">
+                                <img src="">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Tejas Shahane<br><span>Outreach Team</span></h3>
+                                 <br><h3>NAME<br><span>POST</span></h3>
                              </div>
                         </div>
 
@@ -279,5 +267,5 @@
 <br>
 <br>
 
-
+</body>
 {% endblock %}
