--- a/dsaii/templates/footer.html
+++ b/dsaii/templates/footer.html
@@ -2,8 +2,8 @@
 <footer class="page-footer font-small transparent fixed-bottom">
   <div class="footer-copyright text-center py-3">
     <!-- <a href="http://localhost:8000">Admin</a> -->
-          <a class="ml-3" href="{% url 'login' %}"><img src="/static/DL.png" style="height:80px; width:80px;"></a>
-      :&copy; 2021 Copyright ASK
+          <a class="ml-3" href="{% url 'login' %}"><img src="/static/kslogo.jpeg" style="height:80px; width:80px;"></a>
+      :&copy; 2021 Copyright Khushi Sali
 
   </div>
 </footer>
