--- a/static/events.css
+++ b/static/events.css
@@ -10,6 +10,13 @@
 }
 
 
+body{
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 100vh;
+
+}
 
 
 section::before{
@@ -147,8 +154,11 @@ input[type="submit"]:hover{
 }
 
 @media (max-width: 750px) {
+    body{
+        background-image: url('/static/space2.png');
+    }
     .container{
-            left: 0px;
+            left: 2px;
     }
     .container .card .content{
         opacity: 1;
