--- a/dsaii/templates/blogs.html
+++ b/dsaii/templates/blogs.html
@@ -2,6 +2,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
  <script  src="./script.js"></script>
+<body>
 <h1 style="color: white; font-weight: 900; text-align: center;"><br>BLOGS</h1>
 
     <div class="container" >
@@ -28,7 +29,7 @@
 
 </div>
 <br><br><br>
-
+</body>
 <style>
 
     @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,700')
@@ -235,6 +236,9 @@ input[type="submit"]:hover{
     @media (max-width: 750px){
         .container .ul .li .a{
             font-size: small;
+        }
+        body{
+            background-image: url(/static/space2.png);
         }
     }
 </style>
