--- a/static/events.css
+++ b/static/events.css
@@ -156,6 +156,7 @@ input[type="submit"]:hover{
 @media (max-width: 750px) {
     body{
         background-image: url('/static/space2.png');
+        backdrop-filter: brightness(1.5);
     }
     .container{
             left: 2px;
