--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="stylesheet" href="custom.css">
-  <title>DSAII</title>
+  <title>The Celestials</title>
  {% load static %}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 <!-- Google Fonts -->
