--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -227,6 +227,7 @@ input[type="submit"]:hover{
 @media (max-width: 750px)  {
     body{
     background-image: url(/static/space2.png);
+    backdrop-filter: brightness(1.5);
 }
 
     .h1, h1{
