--- a/dsaii/templates/article.html
+++ b/dsaii/templates/article.html
@@ -44,6 +44,7 @@
     align-items: center;
     flex-wrap: wrap;
     min-height: 100vh;
+        backdrop-filter: brightness(1.5);
 
 }
 .container{
