--- a/dsaii/templates/base.html
+++ b/dsaii/templates/base.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body  background="/static/space1.png" style="background-size: cover;" >
+<body style="background: black;" >
 {% include 'navigation.html' %}
   {% block content %}
 
