--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -26,32 +26,23 @@
   <div class="menu">
                     <ul class ="social media" >
                         <li>
-                            <a href="https://www.instagram.com/dsaii.dit/" class="media-icon">
+                            <a href="https://www.instagram.com/khushi._0205/" class="media-icon">
                                 <i class="fab fa-instagram" style="color: white;"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="media-icon">
+                            <a href="mailto:khushi.sali2002@gmail.com" class="media-icon">
                                 <i class="fab fa-google" style="color: white;"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/dsaii" class="media-icon">
+                            <a href="https://github.com/khushi0205" class="media-icon">
                                 <i class="fab fa-github" style="color: white;"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="https://chat.whatsapp.com/LnOuxnqYvdELA3NelRAPh7" class="media-icon">
-                                <i class="fab fa-whatsapp" style="color: white;"></i>
-                            </a>
-                        </li>
+
                         <li >
-                            <a href="https://discord.gg/HUV8K3pBqG" class="media-icon">
-                                <i class="fab fa-discord" style="color: white;"></i>
-                            </a>
-                        </li>
-                        <li >
-                            <a href="https://t.me/dsaiidit" class="media-icon">
+                            <a href="https://t.me/KhushiSali" class="media-icon">
                                 <i class="fab fa-telegram" style="color: white;"></i>
                             </a>
                         </li>
